--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,7 +21,7 @@
   <!-- Font Awesome CSS - Icon Pack -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <!-- Main CSS -->
-  <link rel="stylesheet" href="./miain.css" />
+  <link rel="stylesheet" href="./main.css" />
 
   <!-- Style CSS -->
   <link rel="stylesheet" href="./src/style/style.css" />
@@ -35,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Goal to fil</title>
+  <title>Goal to fit</title>
 </head>
 
 <body>
